--- a/routine.html
+++ b/routine.html
@@ -241,8 +241,8 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Berries</td></tr>
 
 <!--<tr><td>        </td><td>Chew dark leafy greens slowly and thoroughly to maximize reduction of nitrate to nitrite</td></tr>-->
-<!--<tr><td>        </td><td>Brisk walk outside for glucose uptake</td></tr>-->
-<tr><td>        </td><td>Go outside in the sun to produce dopamine in the eyes to prevent myopia</td></tr>
+<tr><td>        </td><td>Walk 10-15 minutes to reduce glucose spike, increase insulin sensitivity, and reduce cortisol</td></tr> <!--https://www.drchristianson.com/blog/how-to-lose-weight-with-adrenal-fatigue/-->
+<tr><td>        </td><td>Go outside in the sun for one minute to produce dopamine in the eyes to prevent myopia</td></tr>
 <!--<tr><td>        </td><td>Lie outside in sun for 15 minutes, wear only shorts, cover face, no sunscreen</td></tr>-->
 
 <tr><td>        </td><td>&nbsp;</td></tr>
@@ -263,7 +263,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Consume a different vegetable every day for a diverse microbiome</td></tr>
 <tr><td>        </td><td>Berries</td></tr>
 <tr><td>        </td><td>Do not overeat.  Put remaining food in a glass jar and vacuum seal for tomorrow</td></tr>
-<tr><td>        </td><td>Walk outside to reduce glucose, increase insulin sensitivity, and reduce cortisol</td></tr> <!--https://www.drchristianson.com/blog/how-to-lose-weight-with-adrenal-fatigue/-->
+<tr><td>        </td><td>Walk 10-15 minutes to reduce glucose spike, increase insulin sensitivity, and reduce cortisol</td></tr> <!--https://www.drchristianson.com/blog/how-to-lose-weight-with-adrenal-fatigue/-->
 
 <tr><td>        </td><td>&nbsp;</td></tr>
 <tr><td>        </td><td>Supplements:</td></tr>
