--- a/young-plasma.html
+++ b/young-plasma.html
@@ -206,8 +206,17 @@
             <h2>Science</h2>
 
             <!--
+            https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7879650/
+            Blood factors transfer beneficial effects of exercise on neurogenesis and cognition to the aged brain
+            2020 July
+
+            https://pubmed.ncbi.nlm.nih.gov/36538409/
+            Safety and efficacy of plasma transfusion from exercise-trained donors in patients with early Alzheimer's disease: protocol for the ExPlas study
+            2022 September
+
             https://pubmed.ncbi.nlm.nih.gov/33161876/
             Plasma from Young Rats Injected into Old Rats Induce Antiaging Effects
+            2021 June
 
             https://www.biorxiv.org/content/10.1101/2022.12.01.518747v1
             YOUNG PLASMA REJUVENATES BLOOD DNA METHYLATION PROFILE, PROLONGS MEAN LIFESPAN AND IMPROVES HEALTH IN OLD RATS
