--- a/routine.html
+++ b/routine.html
@@ -529,7 +529,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <!--<tr><td> </td><td>No root canals</td></tr>-->
 <tr><td> </td><td>No metal dental implants, only ceramic zirconia</td></tr>
     
-<tr><td> </td><td>No very loud noise - this causes hearing loss</td></tr>
+<tr><td> </td><td>No loud noise - this causes hearing loss</td></tr>
 <tr><td> </td><td>Careful of falling - common in older age</td></tr>
 
 <tr><td> </td><td>No antioxidants after exercise-induced oxidant production</td></tr>
