--- a/routine.html
+++ b/routine.html
@@ -172,6 +172,8 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Post meal routine:</td></tr>
 <tr><td>        </td><td>Glycine powder, Now Foods, about 4 grams</td></tr>
 <tr><td>        </td><td>Blood Vessel Formula, Gladdin Longevity, 1-2 ml</td></tr>
+<!--manual treadmill to reduce glucose-->
+<!--red light to reduce glucose-->
 <tr><td>        </td><td>Set timer for 40 minutes</td></tr>
 <tr><td>        </td><td>Brush teeth</td></tr>
 
@@ -226,6 +228,8 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 
 <!--<tr><td>        </td><td>Chew dark leafy greens slowly and thoroughly to maximize reduction of nitrate to nitrite</td></tr>-->
 <tr><td>        </td><td>Walk 10-15 minutes to reduce glucose spike, increase insulin sensitivity, and reduce cortisol</td></tr> <!--https://www.drchristianson.com/blog/how-to-lose-weight-with-adrenal-fatigue/-->
+<!--manual treadmill to reduce glucose-->
+<!--red light to reduce glucose-->
 <tr><td>        </td><td>Go outside in the sun for one minute to produce dopamine in the eyes to prevent myopia</td></tr>
 <!--<tr><td>        </td><td>Lie outside in sun for 15 minutes, wear only shorts, cover face, no sunscreen</td></tr>-->
 
@@ -239,7 +243,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <!--<tr><td>3:00 PM </td><td>Non-Sleep Deep Rest <a href="https://www.youtube.com/watch?v=AKGrmY8OSHM" target="_blank">Link</a> + NuCalm <a href="https://www.nucalm.com/" target="_blank">Link</a></td></tr>-->
 
 <tr><td>        </td><td>&nbsp;</td></tr>
-<tr><td>4:30 PM </td><td>Jump ten times for bone health</td></tr>
+<!--<tr><td>4:30 PM </td><td>Jump ten times for bone health</td></tr>-->
 
 <tr><td>        </td><td>&nbsp;</td></tr>
 <tr><td>5:00 PM </td><td>Dinner</td></tr>
@@ -267,9 +271,10 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Post meal routine:</td></tr>
 <tr><td>        </td><td>Glycine powder, Now Foods, about 4 grams</td></tr>
 <tr><td>        </td><td>Blood Vessel Formula, Gladdin Longevity, 1-2 ml</td></tr>
+<!--manual treadmill to reduce glucose-->
+<!--red light to reduce glucose-->
 <tr><td>        </td><td>Set timer for 40 minutes</td></tr>
 <tr><td>        </td><td>Brush teeth</td></tr>
-
 <tr><td>        </td><td>Floss teeth </td></tr>
 <tr><td>        </td><td>Tounge scraper </td></tr>
 <tr><td>        </td><td>Hydro Floss with small amount of hydrogen peroxide </td></tr>
@@ -382,7 +387,14 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 </table>
 
 <br>
-<p><b>Yearly Routine</b></p>
+<p><b>Yearly Supplement Routine</b></p>
+<table style="celllpadding: 100px">
+    <tr><td> </td><td>ImmunoLin + Immunoglobulin G</td></tr>
+    <tr><td> </td><td>Saccharomyces boulardii CNCM I-745 (Florastor Probiotic)</td></tr>
+</table>
+
+<br>
+<p><b>Yearly Test Routine</b></p>
 <table style="celllpadding: 100px">
 <tr><td> </td><td>Blood testing at Labcorp or Quest (No biotin for 4-7 days before test) </td></tr>
 <tr><td> </td><td>Stool occult blood immunoassay</td></tr>
