--- a/routine.html
+++ b/routine.html
@@ -391,6 +391,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <table style="celllpadding: 100px">
     <tr><td> </td><td>ImmunoLin + Immunoglobulin G</td></tr>
     <tr><td> </td><td>Saccharomyces boulardii CNCM I-745 (Florastor Probiotic)</td></tr>
+    <!--maybe Microbiome Labs Total Gut Restoration kit-->
 </table>
 
 <br>
