--- a/routine.html
+++ b/routine.html
@@ -569,6 +569,16 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 </table>
 
 
+<!--
+**** MAYBE ****
+Per Dr C email, Colorectal Cancer Screening
+    Fecal Immunochemical Test (FIT): A non-invasive test that checks for hidden blood in the stool, done annually. Basically you do a home stool collection.
+    Stool DNA Test: This test looks for DNA changes in stool cells that may indicate cancer or precancerous polyps. It is usually done every three years. Also a home stool collection. 
+-->
+
+
+
+
           </div>
         </div> <!-- / .row -->
       </div> <!-- / .container -->
