--- a/routine-old-moved-to-djp-sep2024.html
+++ b/routine-old-moved-to-djp-sep2024.html
@@ -300,16 +300,8 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <p><b>At every meal</b></p>
 <table style="celllpadding: 100px">
 <tr><td>        </td><td>Eat slowly, chew well, be in a parasympathetic state</td></tr>
-<tr><td>        </td><td>Brush teeth 30-40 minutes after eating.  45-degree angle, make circles, be gentle, look at gums.</td></tr>
+<tr><td>        </td><td>Brush teeth 30-40 minutes after eating</td></tr>
 </table>
-
-<br>
-<p><b>Post meal dental routine</b></p>
-<table style="celllpadding: 100px">
-    <tr><td>        </td><td>Brush teeth using 45-degree angle, make circles, be gentle.  Wait 30-40 minutes after eating</td></tr>
-    <tr><td>        </td><td>Brush tounge</td></tr>
-</table>
-
               
 <br>
 <p><b>Throughout the day</b></p>
