--- a/vsels_old.html
+++ b/vsels_old.html
@@ -5,11 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Favicon -->
-    <link
-      rel="shortcut icon"
-      href="./assets/favicon/favicon.ico"
-      type="image/x-icon"
-    />
+    <!--<link rel="shortcut icon" href="./assets/favicon/favicon.ico" type="image/x-icon" />-->
+    <!--The following is from healthspannaturals.com-->
+    <link rel="icon" type="image/png" href="./assets/favicon/favicon.png?crop=center&height=32&v=1730039801&width=32">
 
     <!-- Map CSS -->
     <link
