--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="navbarPages" href="index.html">
+                        <a class="nav-link" id="navbarPages" href="exosomes.html">
                             Exosomes
                         </a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" id="navbarPages" href="index.html">
+                      <a class="nav-link" id="navbarPages" href="about.html">
                           About Us
                       </a>
                   </li>
@@ -118,10 +118,10 @@
     <section class="pt-8 pt-md-11">
       <div class="container">
         <div class="row justify-content-center">
-          <div class="col-12 col-md-10 col-lg-9 col-xl-8">
+          <div class="col-12 col-md-10 col-lg-9 col-xl-12">
             <!-- Heading -->
             <h1 class="display-4 text-center">
-              Exosomes: Small Messengers with Major Healing Potential
+              Exosomes: Small Messengers for Health
             </h1>
           </div>
         </div>
@@ -131,6 +131,51 @@
     </section>
 
 
+
+    <section class="pt-4 pt-md-11" style="padding-bottom:25px">
+      <div class="container">
+          <div class="row align-items-center">
+              <div class="col-12 col-md-7 col-lg-6 cust-pad order-md-2 ps-11">
+                  <img src="./images/exosomes.webp" width="400" height="500">
+              </div>
+              <div class="col-12 col-md-7 col-lg-6 cust-pad order-md-2 ps-11">
+                  <p class="fs-lg text-muted mb-6">
+                      <!--Use conventional blood marker ranges in addition to <span class="text-primary">ideal marker ranges</span>.-->
+                      Imagine your cells have their own microscopic messaging system, sending out tiny packets filled with healing instructions. These packets, called exosomes, carry crucial signals that help support your body’s natural healing and regeneration processes. </br></br>
+                      Exosome therapy harnesses this natural communication. By using exosomes carefully derived from mesenchymal stem cells, we can potentially send targeted signals that promote healing. </br></br>
+                      It’s like boosting your body’s own repair mechanisms—reducing inflammation, supporting tissue health, and enhancing overall recovery. </br></br>
+                  </p> 
+              </div>
+          </div> <!-- / .row -->
+      </div> <!-- / .container -->
+  </section>
+
+
+
+  <section class="pt-4 pt-md-11" style="padding-bottom:25px">
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-12 col-md-5 col-lg-6 order-md-1">
+                <!-- Image -->
+                <!--<img src="images/img1.png" style="border:1px solid #f2f2f2" class="img-fluid mw-md-150 mw-lg-130 mb-6 mb-md-0" alt="..."  data-aos-delay="100">-->
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/DG317iwwAhY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <div class="col-12 col-md-7 col-lg-6 cust-pad order-md-2 ps-11">
+              <!--
+                <h2>
+                    Tony Wyss-Coray PhD & Young Plasma 
+                </h2>
+                -->
+                <p class="fs-lg text-muted mb-6">
+                    <!--Use conventional blood marker ranges in addition to <span class="text-primary">ideal marker ranges</span>.-->
+                    Watch this video on exosomes—tiny vesicles that play a major role in cellular health and longevity.
+                </p>
+            </div>
+        </div> <!-- / .row -->
+    </div> <!-- / .container -->
+</section>
+
+
     <br />
     <br />
     <br />
@@ -141,14 +186,7 @@
     <br />
     <br />
     <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
+
 
     <!-- SHAPE -->
     <div class="position-relative">
