--- a/index backup old.html
+++ b/index backup old.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="./assets/css/theme.bundle.css" />
     
     <!-- Title -->
-    <title>Institute of Regeneration - VSEL Stem Cell Therapy</title>
+    <title>Potter Institute of Regeneration</title>
       <style>
           .cust-pad
           {
