--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="./assets/css/theme.bundle.css" />
 
     <!-- Title -->
-    <title>Institute of Regeneration - VSEL Stem Cell Therapy</title>
+    <title>Potter Institute of Regeneration</title>
     <style>
       .cust-pad {
         padding-bottom: 1%;
