--- a/young-plasma.html
+++ b/young-plasma.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="./assets/css/theme.bundle.css" />
     
     <!-- Title -->
-    <title>Institute of Regeneration - VSEL Stem Cell Therapy</title>
+    <title>Potter Institute of Regeneration</title>
       <style>
           .cust-pad
           {
