--- a/vsels_old.html
+++ b/vsels_old.html
@@ -365,7 +365,7 @@
 
             <!-- Text -->
             <p class="text-gray-700 mb-2">
-              © Institute of Regeneration <br /><br />
+              © Potter Institute of Regeneration <br /><br />
               <!--
                           <a href="index.html">Avon Cell Therapy</a> <br>
                           <a href="https://avoninstitute.com/" target="_blank">Avon Institute</a> <br>
